--- a/Templates/main.html
+++ b/Templates/main.html
@@ -1,30 +1,32 @@
 <link rel="stylesheet" href="/static/style.css" type="text/css">
 
-
-<div class="login">
-    <div class="login-screen">
-        <div class="page-title">
-            <h1>ScheduleGenerator v1.0</h1>
-        </div>
-
-        <div class="text-form">
-
-            <div class="instructions">
-                Please proceed to <a href="https://uwaterloo.ca/api/register">the Waterloo website</a> to request an API token.
+<form action="/token" method="POST">
+    <div class="login">
+        <div class="login-screen">
+            <div class="page-title">
+                <h1>ScheduleGenerator v1.0</h1>
             </div>
-            <br>
-            <br>
-            <br>
-            <br>
 
-            <div class="input-token">
-                <input type="password" class="login-field" value="" placeholder="token" name="password">
-                <label class="login-field-icon fui-user" for="login-user"></label>
+            <div class="text-form">
 
-            <input type="submit" value="Continue" class="btn btn-primary btn-large btn-block" >
-            <br>
+                <div class="instructions">
+                    Please proceed to <a href="https://uwaterloo.ca/api/register">the Waterloo website</a> to request an API token.
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
+
+                <div class="input-token">
+                    <input type="text" class="login-field" value="" placeholder="token" name="password">
+                    <label class="login-field-icon fui-user" for="login-user"></label>
+                </div>
+
+                <input type="submit" value="Continue" class="btn btn-primary btn-large btn-block" >
+                <br>
+            </div>
         </div>
     </div>
-</div>
+</form>
 
 
