--- a/app/Templates/select.html
+++ b/app/Templates/select.html
@@ -38,84 +38,84 @@ token = {{ token }}
                     <input type="hidden" name="token" value="{{ token }}">
                     <div class="container">
                         <div class="input-token">
-                            <input class="login-field course" value="" placeholder="Course 1" name="course1">
+                            <input class="login-field course" value="" placeholder="Subject 1" name="course1">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
 
                         <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course1num">
-                            <label class="login-field-icon fui-user" for="login-name"></label>
-                        </div>
-                    </div>
-
-                    <div class="container">
-                        <div class="input-token">
-                            <input class="login-field course" value="" placeholder="Course 2" name="course2">
-                            <label class="login-field-icon fui-user" for="login-name"></label>
-                        </div>
-
-                        <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course2num">
+                            <input class="login-field course-num" value="" placeholder="Course Number 1" name="course1num">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
                     </div>
 
                     <div class="container">
                         <div class="input-token">
-                            <input class="login-field course" value="" placeholder="Course 3" name="course3">
+                            <input class="login-field course" value="" placeholder="Subject 2" name="course2">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
 
                         <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course3num">
-                            <label class="login-field-icon fui-user" for="login-name"></label>
-                        </div>
-                    </div>
-
-                    <div class="container">
-                        <div class="input-token">
-                            <input class="login-field course" value="" placeholder="Course 4" name="course4">
-                            <label class="login-field-icon fui-user" for="login-name"></label>
-                        </div>
-
-                        <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course4num">
+                            <input class="login-field course-num" value="" placeholder="Course Number 2" name="course2num">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
                     </div>
 
                     <div class="container">
                         <div class="input-token">
-                            <input class="login-field course" value="" placeholder="Course 5" name="course5">
+                            <input class="login-field course" value="" placeholder="Subject 3" name="course3">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
 
                         <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course5num">
-                            <label class="login-field-icon fui-user" for="login-name"></label>
-                        </div>
-                    </div>
-
-                    <div class="container">
-                        <div class="input-token">
-                            <input class="login-field course" value="" placeholder="Course 6" name="course6">
-                            <label class="login-field-icon fui-user" for="login-name"></label>
-                        </div>
-
-                        <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course6num">
+                            <input class="login-field course-num" value="" placeholder="Course Number 3" name="course3num">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
                     </div>
 
                     <div class="container">
                         <div class="input-token">
-                            <input class="login-field course" value="" placeholder="Course 7" name="course7">
+                            <input class="login-field course" value="" placeholder="Subject 4" name="course4">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
 
                         <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course7num">
+                            <input class="login-field course-num" value="" placeholder="Course Number 4" name="course4num">
+                            <label class="login-field-icon fui-user" for="login-name"></label>
+                        </div>
+                    </div>
+
+                    <div class="container">
+                        <div class="input-token">
+                            <input class="login-field course" value="" placeholder="Subject 5" name="course5">
+                            <label class="login-field-icon fui-user" for="login-name"></label>
+                        </div>
+
+                        <div class="input-token">
+                            <input class="login-field course-num" value="" placeholder="Course Number 5" name="course5num">
+                            <label class="login-field-icon fui-user" for="login-name"></label>
+                        </div>
+                    </div>
+
+                    <div class="container">
+                        <div class="input-token">
+                            <input class="login-field course" value="" placeholder="Subject 6" name="course6">
+                            <label class="login-field-icon fui-user" for="login-name"></label>
+                        </div>
+
+                        <div class="input-token">
+                            <input class="login-field course-num" value="" placeholder="Course Number 6" name="course6num">
+                            <label class="login-field-icon fui-user" for="login-name"></label>
+                        </div>
+                    </div>
+
+                    <div class="container">
+                        <div class="input-token">
+                            <input class="login-field course" value="" placeholder="Subject 7" name="course7">
+                            <label class="login-field-icon fui-user" for="login-name"></label>
+                        </div>
+
+                        <div class="input-token">
+                            <input class="login-field course-num" value="" placeholder="Course Number 7" name="course7num">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
                     </div>
