--- a/app/static/style.css
+++ b/app/static/style.css
@@ -76,3 +76,19 @@ box-shadow: none;
   display: block;
 	margin-top: 12px;
 }
+
+.arrow-left{
+  position:absolute;
+  top:50%;
+  left:0%;
+  transform:translate(0%,-50%);
+  -ms-transform:translate(-0%,-50%)
+}
+
+.arrow-right{
+  position:absolute;
+  top:50%;
+  right:0%;
+  transform:translate(0%,-50%);
+  -ms-transform:translate(0%,-50%)
+}
