add filtering from start and end time

--- a/app/Templates/select.html
+++ b/app/Templates/select.html
@@ -43,7 +43,7 @@ token = {{ token }}
                         </div>
 
                         <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course1num">
+                            <input class="login-field course-num" value="" placeholder="Course number" name="course1num">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
                     </div>
@@ -55,7 +55,7 @@ token = {{ token }}
                         </div>
 
                         <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course2num">
+                            <input class="login-field course-num" value="" placeholder="Course number" name="course2num">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
                     </div>
@@ -67,7 +67,7 @@ token = {{ token }}
                         </div>
 
                         <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course3num">
+                            <input class="login-field course-num" value="" placeholder="Course number" name="course3num">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
                     </div>
@@ -79,7 +79,7 @@ token = {{ token }}
                         </div>
 
                         <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course4num">
+                            <input class="login-field course-num" value="" placeholder="Course number" name="course4num">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
                     </div>
@@ -91,7 +91,7 @@ token = {{ token }}
                         </div>
 
                         <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course5num">
+                            <input class="login-field course-num" value="" placeholder="Course number" name="course5num">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
                     </div>
@@ -103,7 +103,7 @@ token = {{ token }}
                         </div>
 
                         <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course6num">
+                            <input class="login-field course-num" value="" placeholder="Course number" name="course6num">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
                     </div>
@@ -115,13 +115,16 @@ token = {{ token }}
                         </div>
 
                         <div class="input-token">
-                            <input class="login-field course-num" value="" placeholder="Course 1" name="course7num">
+                            <input class="login-field course-num" value="" placeholder="Course number" name="course7num">
                             <label class="login-field-icon fui-user" for="login-name"></label>
                         </div>
                     </div>
 
                     <div class="input-token">
-                        Filtered: <input type="checkbox" value="12:00" name="filter">
+                        No classes before: <input type="type" value="" name="before_filter" placeholder="9:30">
+                    </div>
+                    <div class="input-token">
+                        No classes after: <input type="text" value = "" name="after_filter" placeholder="17:30">
                     </div>
 
                     <input type="submit" value="Continue" class="btn btn-primary btn-large btn-block" >
