--- a/app/Templates/schedule.html
+++ b/app/Templates/schedule.html
@@ -16,13 +16,14 @@
 }
 </style>
 
-<div id="samptext"></div>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
 {% if not schedule %}
   	Unfortunately there are no schedules that match your requirements.
 {% else %}
 	<h1 style="text-align: center"> Your Schedules </h1>
 	{% for sched in schedule %}
-		<table class="sched" border="1">
+		<table class="sched table" border="1">
 			<tr>
 				<th>Time</th>
 				<th>Monday</th>
@@ -30,8 +31,6 @@
 				<th>Wednesday</th>
 				<th>Thursday</th>
 				<th>Friday</th>
-				<th>Saturday</th>
-				<th>Sunday</th>
 			</tr>
 
 		{% for time in sched %}
@@ -72,7 +71,6 @@
 		<button class="arrow-left" onclick="plusDivs(-1)">&#10094;</button>
 		<button class="arrow-right" onclick="plusDivs(1)">&#10095;</button>
 	{% endfor %}
-	<table id="myTable" border="1">
 {% endif %}	
 
 <script>
@@ -91,6 +89,6 @@ function showDivs(n) {
   for (i = 0; i < x.length; i++) {
      x[i].style.display = "none";  
   }
-  x[schedIndex-1].style.display = "block";  
+  x[schedIndex-1].style.display = "table";  
 }
 </script>
