--- a/app/Templates/main.html
+++ b/app/Templates/main.html
@@ -9,6 +9,9 @@
 
             <div class="text-form">
 
+                <div>
+                    <h1>Hi, {{ current_user.username }}!</h1>
+                </div>
                 <div class="instructions">
                     Please proceed to <a href="https://uwaterloo.ca/api/register">the Waterloo website</a> to request an API token.
                 </div>
