added roles, template, db display

--- a/app/Templates/error.html
+++ b/app/Templates/error.html
@@ -1,4 +1,7 @@
-<link rel="stylesheet" href="/static/style.css" type="text/css">
+{% extends "main2.html" %}
+
+{% block content %}
+
 <script>
 function goBack() {
     window.history.back();
@@ -29,6 +32,8 @@ function goBack() {
         </div>
     </div>
 </div>
+
+{% endblock %}
 
 
 
