--- a/app/Templates/register.html
+++ b/app/Templates/register.html
@@ -1,3 +1,7 @@
+{% extends "main2.html" %}
+
+{% block content %}
+
 <h1>Register</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
@@ -31,3 +35,5 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+
+{% endblock %}
