--- a/app/Templates/schedule.html
+++ b/app/Templates/schedule.html
@@ -1,3 +1,7 @@
+{% extends "main2.html" %}
+
+{% block content %}
+
 <style>
 .arrow-left{
   	position:absolute;
@@ -15,8 +19,6 @@
   	-ms-transform:translate(0%,-50%)
 }
 </style>
-
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 {% if not schedule %}
   	Unfortunately there are no schedules that match your requirements.
@@ -94,3 +96,5 @@ function showDivs(n) {
   x[schedIndex-1].style.display = "table"; 
 }
 </script>
+
+{% endblock %}
